2007-01-02  Jan Schampera <jan.schampera@unix.net>

	* ekiga.schemas.in.in, src/gui/addressbook.cpp, src/gui/main.cpp,
	src/gui/preferences.cpp, src/devices/audio.cpp: String fixes (#308994,
	thanks to Clytie Siddall).

2007-01-02  Damien Sandras  <dsandras@gnome.org>
	
	* src/endpoints/sip.cpp: Fixed previous commit.

2007-01-02  Damien Sandras  <dsandras@gnome.org>

	* lib/gmcontacts/gmcontacts-ldap.cpp: Make sure an user without
	VoIP URL is not displayed with an incorrect VoIP URL from another
	user. (#351951)
	
2007-01-02  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/manager.cpp: Do not stop displaying stats when
	rejecting an incoming call while a call is already active. Display
	the number of missed calls at the end of each call. (#369339).

2007-01-02  Damien Sandras  <dsandras@gnome.org>
	
	* src/endpoints/sip.cpp, src/endpoints/sip.h: When several accounts
	are registered to the same services provider, use the default one
	(if any) among them for outgoing calls. (Fixes #371374)

2007-01-02  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/h323.cpp, src/endpoints/sip.h, src/endpoints/h323.h,
	src/endpoints/sip.cpp: Use new OPAL API for incoming calls, otherwise
	no incoming call popup was shown.

2007-01-02  Damien Sandras  <dsandras@gnome.org>

	* lib/gui/gmdialog.c: Prevent progress dialogs to be destroyed 
	before the processing is finished. (Fixes #390359)

2007-01-02  Damien Sandras  <dsandras@gnome.org>

	* src/components/bonobo.cpp: Show the main window before presenting
	the alert explaining that Ekiga is already running. (Fixes #342560)
	
2007-01-02  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/manager.cpp: Use next available port in the UDP
	ports range for SIP when the main listen port is already in use.

2007-01-02  Damien Sandras  <dsandras@gnome.org>

	* lib/gui/gmconnectbutton.c: Dropped GTK_WIDGET_UNSET_FLAGS
	(GTK_WIDGET (cb), GTK_CAN_FOCUS) for the connect button. Fixes
	#380040.
