@@ -5,6 +5,12 @@
 	thanks to Clytie Siddall).
 
 2007-01-02  Damien Sandras  <dsandras@gnome.org>
+
+	* src/gui/addressbook.cpp, src/gui/contacts.cpp, src/gui/main.cpp,
+	src/gui/statusicon.cpp, lib/gui/gmmenuaddon.c: Use stock labels
+	instead of home made labels when appropriate. (#337050)
+	
+2007-01-02  Damien Sandras  <dsandras@gnome.org>
 	
 	* src/endpoints/sip.cpp: Fixed previous commit.
 
